--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.lawlesst</groupId>
+    <groupId>com.webofscience.amrservice</groupId>
     <artifactId>wos</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>war</packaging>
